# Snake

./: CMakeLists.txt
include/: Food.hpp  GameObject.hpp  ResourceManager.hpp  SDLApp.hpp  Snake.hpp  TexturedRect.hpp
src/: Food.cpp  GameObject.cpp  ResourceManager.cpp  SDLApp.cpp  Snake.cpp  TexturedRect.cpp  main.cpp
